package Java_PP.Controlador;

class Pedido {
    public Pedido(int produtoId, int quantidade) {
    }
}